# fcc

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  NOTES.md  README.md  build.sh  compliance_tests.sh  fcc_mac_test.sh  fcc_tests.sh  notes.md  return_2.s  tests.sh  unit_tests.sh
resources/: return_2
scripts/: build.sh  clean.sh  compliance_tests.sh  format.sh  tests.sh  unit_tests.sh
src/: asm.rs  assembler.rs  assembly_emitter.rs  ast.rs  cli.rs  code_emitter.rs  code_generator.rs  driver.rs  file_reader.rs  file_util.rs  lexer.rs  lib.rs  main.rs  parser.rs  tacky.rs  title.rs  token.rs  util.rs
src/ast/: asm.rs  ast.rs  ast_item.rs  c.rs  display.rs  expression.rs  function_declaration.rs  mod.rs  parser.rs  print.rs  program.rs  statement.rs  tacky.rs
src/ast/assembly_ast/: assembly_ast.rs  function_definition.rs  instruction.rs  mod.rs  operand.rs  program.rs
src/c_ast/: ast.rs  display.rs  function_declaration.rs  mod.rs  parser.rs
src/common/: folder.rs  mod.rs  util.rs
src/items/: ast_item.rs  expression.rs  function_declaration.rs  mod.rs  program.rs  statement.rs
src/parser/: assembly_parser.rs  c_parser.rs  mod.rs
src/tacky/: ast.rs  builder.rs  display.rs  from.rs  mod.rs  parser.rs  program.rs
test/: README.md  ast_tests.rs  codegen_tests.rs  driver_tests.rs  folder_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs  tacky_gen_tests.rs  tacky_tests.rs  util_tests.rs
tests/: assembler_test.rs  assembly_ast_parser_test.rs  ast_test.rs  c_ast_parser_test.rs  code_emitter.rs  code_emitter_test.rs  lexer_test.rs  parser_test.rs  pretty_print_test.rs  print_test.rs  test.rs
(+35 files in other folders)
