[package]
name = "fcc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
regex = "1.11.1"
log = "0.4"
env_logger = "0.11.8"

# Integration tests configuration
[[test]]
name = "lexer_tests"
path = "test/lexer_tests.rs"

[[test]]
name = "util_tests"
path = "test/util_tests.rs"

[[test]]
name = "ast_tests"
path = "test/ast_tests.rs"

[[test]]
name = "driver_tests"
path = "test/driver_tests.rs"

[[test]]
name = "tacky_tests"
path = "test/tacky_tests.rs"

[[test]]
name = "folder_tests"
path = "test/folder_tests.rs"

[[test]]
name = "parser_tests"
path = "test/parser_tests.rs"

[[test]]
name = "semantic_tests"
path = "test/semantic_tests.rs"

[[test]]
name = "tacky_gen_tests"
path = "test/tacky_gen_tests.rs"

[[test]]
name = "codegen_tests"
path = "test/codegen_tests.rs"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
